@@ -63,6 +63,9 @@ Tomography = [
 		{"tag": "section", "text": "PostProcessing", "children": [
 		]}
 	]},
+		{"tag": "section", "text": "Exports", "openItem": "False", "children": [
+		{"tag": "protocol", "value": "ProtExportCoordinates3D", "text": "default"}
+	]},
         {"tag": "section", "text": "Test", "children": [
             {"tag": "protocol", "value": "XmippProtMisalignTiltSeries", "text": "default"}
     ]}
