@@ -56,3 +56,4 @@ from .protocol_ctf_consensus import ProtCTFTomoSeriesConsensus
 from .protocol_fit_ellipsoid import TomoProtFitEllipsoid, XmippProtFitEllipsoid
 from .protocol_landmark_to_2d import ProtTomoLandmarksTo2D
 from .protocol_mask_coordinates import ProtMaskCoordinates
+from .protocol_export_coords import ProtExportCoordinates3D
