@@ -4,6 +4,7 @@ v3.9.0:
   - TS viewer: Adding angles and the transformation matrix information
   - Update napari to v0.4.19
   - Steps more precise in GPU usage. Improved execution
+  - add export coordinates 3D protocol
  Developers:
   - Execution mode at class level
 v3.8.0:
